// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateConfirmation renders content and actions 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "minHeight": 200,
      "paddingBottom": 20,
      "paddingTop": 24,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "CentraNo1-Book",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    CONTENT_MOCK
  </Text>
  <View
    collapsable={false}
    style={
      {
        "flex": 0,
        "justifyContent": "center",
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
      testID="bottomsheetfooter"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#4459ff",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
        testID="bottomsheetfooter-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "CentraNo1-Medium",
              "fontSize": 16,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          CONFIRM_TEXT_MOCK
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "#4459ff",
            "borderRadius": 24,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "marginLeft": 16,
            "marginTop": 0,
            "paddingHorizontal": 16,
          }
        }
        testID="bottomsheetfooter-button-subsequent"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#4459ff",
              "fontFamily": "CentraNo1-Medium",
              "fontSize": 16,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          CANCEL_TEXT_MOCK
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`TemplateConfirmation renders content without actions 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "minHeight": 200,
      "paddingBottom": 20,
      "paddingTop": 24,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "CentraNo1-Book",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    CONTENT_MOCK
  </Text>
</View>
`;
